kubernetes/namespaces/monitoring/manifest.yml
###############################################################################
# Namespace specification for Monitoring
#
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    # The name of a higher level application this one is part of
    app.kubernetes.io/part-of: monitoring-services
###############################################################################
# Sensitive credentials for Grafana
#
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
  labels:
    # The name of the application
    app.kubernetes.io/name: grafana
    # The component within the architecture
    app.kubernetes.io/component: data-visualization
    # The name of a higher level application this one is part of
    app.kubernetes.io/part-of: monitoring-services
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - match: Host(`${GRAFANA_DOMAIN}`)
      kind: Rule
      services:
        - name: grafana
          namespace: monitoring
          port: http-web
          sticky:
            cookie:
              httpOnly: true
              name: grafana
              secure: true
              sameSite: none
